--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "upgrade-interactive": "npm-check --update"
+    "upgrade-interactive": "npm-check --update",
+    "fix": "npm run -s format && npm run -s lint:fix",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:conflict": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsz,gql,graphql,json}'"
   },
   "eslintConfig": {
     "extends": [
@@ -42,15 +47,18 @@
     ]
   },
   "devDependencies": {
+    "@types/prettier": "^2.2.3",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "npm-check": "^5.9.2",
+    "prettier": "^2.2.1",
     "typesync": "^0.8.0"
   }
 }
